chore(cluster): include Storage Microservice in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,14 @@ services:
     networks:
       - newzone-net
 
+  storage:
+    build: ./services/storage
+    container_name: storage-service
+    ports:
+      - "3003:3003"
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
