--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     container_name: identity-service
     ports:
       - "3000:3000"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3000/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
     networks:
       - newzone-net
 
@@ -14,6 +19,11 @@ services:
     container_name: metadata-service
     ports:
       - "3001:3001"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3001/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
     networks:
       - newzone-net
 
@@ -22,6 +32,11 @@ services:
     container_name: consensus-service
     ports:
       - "3002:3002"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3002/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
     networks:
       - newzone-net
 
@@ -30,6 +45,11 @@ services:
     container_name: storage-service
     ports:
       - "3003:3003"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3003/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
     networks:
       - newzone-net
 
@@ -38,6 +58,11 @@ services:
     container_name: gateway-service
     ports:
       - "3004:3004"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3004/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
     networks:
       - newzone-net
 
