--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,23 @@ services:
     networks:
       - newzone-net
 
+  monitoring:
+    build: ./services/monitoring
+    container_name: monitoring-service
+    ports:
+      - "3007:3007"
+    restart: always
+    depends_on:
+      logging:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3007/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
