--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,6 +180,23 @@ services:
     networks:
       - newzone-net
 
+  scheduler:
+    build: ./services/scheduler
+    container_name: scheduler-service
+    ports:
+      - "3010:3010"
+    restart: always
+    depends_on:
+      directory:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3010/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
