--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -250,6 +250,27 @@ services:
     networks:
       - newzone-net
 
+  rules:
+    build: ./services/rules
+    container_name: rules-service
+    ports:
+      - "3014:3014"
+    restart: always
+    depends_on:
+      queue:
+        condition: service_healthy
+      state:
+        condition: service_healthy
+      event:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3014/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
