--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,6 +271,25 @@ services:
     networks:
       - newzone-net
 
+  p2p:
+    build: ./services/p2p
+    container_name: p2p-service
+    ports:
+      - "3015:3015"
+    restart: always
+    depends_on:
+      rules:
+        condition: service_healthy
+    environment:
+      SELF_URL: "http://p2p-service:3015"
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3015/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
