--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -290,6 +290,29 @@ services:
     networks:
       - newzone-net
 
+  replication:
+    build: ./services/replication
+    container_name: replication-service
+    ports:
+      - "3016:3016"
+    restart: always
+    depends_on:
+      p2p:
+        condition: service_healthy
+      state:
+        condition: service_healthy
+      event:
+        condition: service_healthy
+      rules:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:3016/health"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
+    networks:
+      - newzone-net
+
 networks:
   newzone-net:
     driver: bridge
